--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ section .title::after {
 /* home section styling */
 .home {
   display: flex;
-  background: url("images/stack.gif") no-repeat center;
+  background: url("images/galaxy.jpg") no-repeat center;
   background-color: #111;
   height: 100vh;
   color: #fff;
